src/dots/dots_kernel.ss/src/Safir/Dob/Typesystem/Internal/Kernel.h

    
    DOTS_KERNEL_API DotsC_Int32 DotsC_NumberOfTypeIds();
    DOTS_KERNEL_API DotsC_Int32 DotsC_NumberOfClasses();
    DOTS_KERNEL_API DotsC_Int32 DotsC_NumberOfProperties();
    DOTS_KERNEL_API DotsC_Int32 DotsC_NumberOfEnumerations();
    DOTS_KERNEL_API DotsC_Int32 DotsC_NumberOfExceptions();
    DOTS_KERNEL_API void DotsC_GetAllTypeIds(DotsC_TypeId* buf,
                                             DotsC_Int32 bufSize,
                                             DotsC_Int32& size);
    DOTS_KERNEL_API bool DotsC_TypeExists(DotsC_TypeId typeId);
    DOTS_KERNEL_API bool DotsC_IsClass(DotsC_TypeId typeId);
    DOTS_KERNEL_API bool DotsC_IsProperty(DotsC_TypeId typeId);
    DOTS_KERNEL_API bool DotsC_IsEnumeration(DotsC_TypeId typeId);
    DOTS_KERNEL_API bool DotsC_IsException(DotsC_TypeId typeId);
    DOTS_KERNEL_API DotsC_TypeId DotsC_TypeIdFromName(const char* typeName);
    DOTS_KERNEL_API const char* DotsC_GetTypeName(DotsC_TypeId typeId);
    DOTS_KERNEL_API const char* DotsC_MemberTypeName(DotsC_MemberType memberType);
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetNumberOfEnumerationValues(DotsC_TypeId enumId);
    DOTS_KERNEL_API const char* DotsC_GetEnumerationValueName(DotsC_TypeId enumId, DotsC_EnumerationValue enumVal);
    DOTS_KERNEL_API DotsC_EnumerationValue DotsC_EnumerationValueFromName(DotsC_TypeId enumId, const char* enumValueName);
    DOTS_KERNEL_API void DotsC_GetEnumerationChecksum(const DotsC_TypeId typeId,
                                                      DotsC_TypeId & checksum);
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetNumberOfMembers(DotsC_TypeId typeId);
    DOTS_KERNEL_API DotsC_MemberIndex DotsC_GetMemberId(DotsC_TypeId typeId, const char* memberName);
    DOTS_KERNEL_API void DotsC_GetMemberInfo(DotsC_TypeId typeId,  
                                             DotsC_MemberIndex member,  
                                             DotsC_MemberType& memberType,
                                             const char*& memberName,           
                                             DotsC_TypeId& complexType,   
                                             DotsC_Int32& stringLength,   
                                             DotsC_CollectionType& collectionType, 
                                             DotsC_Int32& arraySize);   
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetMemberArraySizeProperty(DotsC_TypeId classId,
                                                                 DotsC_TypeId propertyId,
                                                                 DotsC_MemberIndex propertyMember);
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetStringMemberMaxLengthProperty(DotsC_TypeId classId,
                                                                       DotsC_TypeId propertyId,
                                                                       DotsC_MemberIndex propertyMember);
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetNumberOfParameters(DotsC_TypeId typeId);
    DOTS_KERNEL_API DotsC_ParameterIndex  DotsC_GetParameterId(DotsC_TypeId typeId, const char* parameterName);
    DOTS_KERNEL_API void DotsC_GetParameterInfo(DotsC_TypeId typeId,
                                                DotsC_ParameterIndex parameter,
                                                DotsC_MemberType& memberType,
                                                const char*& parameterName,
                                                DotsC_TypeId& complexTypeId,
                                                DotsC_CollectionType& collectionType,
                                                DotsC_Int32& numberOfValues);
    DOTS_KERNEL_API bool DotsC_IsOfType(DotsC_TypeId type, DotsC_TypeId ofType);
    DOTS_KERNEL_API void DotsC_GetCompleteType(DotsC_TypeId type,
                                               DotsC_TypeId* buf,
                                               DotsC_Int32 bufSize,
                                               DotsC_Int32& noResults);
    DOTS_KERNEL_API DotsC_TypeId DotsC_GetParentType(DotsC_TypeId type);
    DOTS_KERNEL_API void DotsC_HasProperty(DotsC_TypeId classTypeId,
                                           DotsC_TypeId propertyTypeId,
                                           bool& hasProperty,
                                           bool& isInherited);
    DOTS_KERNEL_API bool DotsC_GetPropertyMappingKind(const DotsC_TypeId classTypeId,
                                                      const DotsC_TypeId propertyTypeId,
                                                      const DotsC_MemberIndex propertyMember,
                                                      DotsC_PropertyMappingKind & mappingKind);