include/Safir/Utilities/Internal/Id.h

    
    LLUF_ID_API std::int64_t LlufId_Generate64(const char* str);
    LLUF_ID_API std::int64_t LlufId_GenerateRandom64();