src/dots/dots_dotnet.ss/src/Kernel.cs

/******************************************************************************
*
* Copyright Saab AB, 2005-2015 (http://safir.sourceforge.net)
* 
* Created by: Joel Ottosson / joot
*
*******************************************************************************
*
* This file is part of Safir SDK Core.
*
* Safir SDK Core is free software: you can redistribute it and/or modify
* it under the terms of version 3 of the GNU General Public License as
* published by the Free Software Foundation.
*
* Safir SDK Core is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with Safir SDK Core.  If not, see <http://www.gnu.org/licenses/>.
*
******************************************************************************/

using System;
using System.Runtime.InteropServices;


namespace Safir.Dob.Typesystem.Internal
{
    /// <summary>
    /// Summary description for Kernel.
    /// </summary>
    internal class Id
    {
        internal const string LLUF_ID_NAME = "lluf_id.dll";

        internal static Int64 Generate64BitHash(string str)
        {
            if (str == null || str.Length == 0)
            {
                throw new SoftwareViolationException("Cannot generate a hash from an empty or null string (isNull = " + (str == null) + ")");
            }
            System.IntPtr strPtr = Internal.InternalOperations.CStringOf(str);
            Int64 result = LlufId_Generate64(strPtr);
            Marshal.FreeHGlobal(strPtr);
            return result;
        }

        [DllImport(LLUF_ID_NAME, CallingConvention = CallingConvention.Cdecl)]
        private static extern Int64 LlufId_Generate64(System.IntPtr str);

        [DllImport(LLUF_ID_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern Int64 LlufId_GenerateRandom64();
    }
    /// <summary>
    /// Summary description for Kernel.
    /// </summary>
    internal class Kernel
    {
        internal const string DOTS_KERNEL_NAME = "dots_kernel.dll";
		        
        //********************************************************
        //* Static type information operations
        //********************************************************
        //GetNumberOfTypeIds
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_NumberOfTypeIds();

        //GetNumberOfClasses
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_NumberOfClasses();

        //GetNumberOfProperties
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_NumberOfProperties();

        //GetNumberOfEnumerations
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_NumberOfEnumerations();

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_NumberOfExceptions();

        //GetAllTypeId
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetAllTypeIds(System.IntPtr buf,
                                                        System.Int32 bufSize,
                                                        out System.Int32 size);

        //Exists
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern byte DotsC_TypeExists(System.Int64 id);

        //IsClass
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern byte DotsC_IsClass(System.Int64 id);

        //IsProperty
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern byte DotsC_IsProperty(System.Int64 id);

        //IsEnumeration
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern byte DotsC_IsEnumeration(System.Int64 id);

        //IsException
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern byte DotsC_IsException(System.Int64 id);

        //TypeIdFromName
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int64 DotsC_TypeIdFromName(System.IntPtr str);

        //GetTypeName
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.IntPtr DotsC_GetTypeName(System.Int64 id);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.IntPtr DotsC_MemberTypeName(MemberType memberType);

        //GetNumberOfEnumerationValues
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetNumberOfEnumerationValues(System.Int64 enumId);

        //GetEnumerationValueName
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.IntPtr DotsC_GetEnumerationValueName(System.Int64 enumId,
                                                                           System.Int32 enumVal);

        //EnumerationValueFromName
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_EnumerationValueFromName(System.Int64 enumId,
                                                                           System.IntPtr enumValueName);

		//GetEnumerationChecksum
		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern void DotsC_GetEnumerationChecksum(System.Int64 typeId,
		                                                         out System.Int64 checksum);

        //********************************************************
        //* Functions for retrieving member info about object types
        //********************************************************
        //GetNumberOfMembers
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetNumberOfMembers(System.Int64 id);

        //GetMemberId
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetMemberId(System.Int64 id,
                                                              System.IntPtr str);

		//GetMemberInfo
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_GetMemberInfo(System.Int64 id,                //in
		                                                System.Int32 member,            //in
		                                                out MemberType mt,              //out
		                                                out System.IntPtr memberName,   //out
		                                                out System.Int64 complexType,   //out
		                                                out System.Int32 stringLength,  //out
		                                                out CollectionType collectionType, //out
		                                                out System.Int32 arrLength );   //out

		//GetMemberArraySizeProperty
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_GetMemberArraySizeProperty(System.Int64 classId,
		                                                                     System.Int64 propertyId,
		                                                                     System.Int32 propertyMember);

		//GetStringMemberMaxLength
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_GetStringMemberMaxLengthProperty(System.Int64 classId,
		                                                                           System.Int64 propertyId,
		                                                                           System.Int32 propertyMember);

        //********************************************************
        //* Functions handling parameters
        //********************************************************
        //GetNumberOfParameters
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetNumberOfParameters(System.Int64 id);

        //GetParameterId
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetParameterId(System.Int64 id,
                                                                 System.IntPtr parameterName);

        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_GetParameterInfo(System.Int64 typeId,
								                           System.Int32 parameter,
								                           out MemberType memberType,
								                           out System.IntPtr parameterName,
		                                                   out System.Int64 complexType,
		                                                   out CollectionType collectionType,
		                                                   out System.Int32 numberOfValues);

        //************************************************************************************
        //* Type compatibility
        //************************************************************************************
        //Checks if type is an instance of the ofType, direct or by inheritance
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern byte DotsC_IsOfType(System.Int64 theType,
                                                   System.Int64 ofType);

        //GetCompleteType
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetCompleteType(System.Int64 theType,
                                                          System.IntPtr buf,
                                                          System.Int32 bufSize,
                                                          out System.Int32 noResults);

        //GetParentType
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern System.Int64 DotsC_GetParentType(System.Int64 theType);

        //HasProperty
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_HasProperty(System.Int64 classTypeId,
                                                      System.Int64 propertyTypeId,
                                                      out byte hasProperty,
                                                      out byte isInherited);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern byte DotsC_GetPropertyMappingKind(System.Int64 classTypeId,
		                                                         System.Int64 propertyTypeId,
		                                                         System.Int32 propertyMember,
	                                                  			 out DotsC_PropertyMappingKind mappingKind);
